tests/compile_fail/conflicting_long.stderr
error: `no_long` and `long` are conflicting attributes, they cannot go together in the same field.
 --> $DIR/conflicting_long.rs:8:9
  |
8 |     pub value: bool,
  |         ^^^^^
